// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`generate-docs should accept pages it just wrote 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "CLI documentation in <sandbox>/docs is up to date (14 pages)",
  ],
}
`;

exports[`generate-docs should generate a page per command group 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Generated 14 documentation pages in <sandbox>/docs",
  ],
}
`;

exports[`generate-docs should reject pages that drifted 1`] = `
{
  "exitCode": 1,
  "stderr": [
    "Execution of command 'generate-docs' failed, error: CLI documentation in <sandbox>/drifted is stale, regenerate it with 'xrf-cli generate-docs':",
    "outdated: README.md",
    "missing: archive.md",
    "missing: assets.md",
    "missing: docs.md",
    "missing: externs.md",
    "missing: gamedata.md",
    "missing: ltx.md",
    "missing: ogf.md",
    "missing: omf.md",
    "missing: particle.md",
    "missing: spawn.md",
    "missing: texture.md",
    "missing: thm.md",
    "missing: translation.md",
  ],
  "stdout": [],
}
`;

exports[`generate-docs should write the expected pages 1`] = `
[
  {
    "path": "docs/README.md",
    "sha256": "5eba259446de187b6f8c75b3fae86f899f4b46b8f58496d1e47b017a72c2bff5",
    "size": 2582,
  },
  {
    "path": "docs/archive.md",
    "sha256": "13db2979a079d84199b130133d20a2f2eeae514aff57d86df56963e7ead2fd95",
    "size": 1715,
  },
  {
    "path": "docs/assets.md",
    "sha256": "59677e59f89d16b6d22cf8fe83ac5675fc2757ef95634d4644d05e3375aef8b1",
    "size": 1199,
  },
  {
    "path": "docs/docs.md",
    "sha256": "1a6dab8d43830ac867aa1c64ffdebc659098b3eb7cdeea33ec18c4340944c2ed",
    "size": 613,
  },
  {
    "path": "docs/externs.md",
    "sha256": "951459c2a075b5b1a35e421f7d34195a92f7b7e91ec09d5a4655e53daed2f836",
    "size": 926,
  },
  {
    "path": "docs/gamedata.md",
    "sha256": "0b23ea4808df78e57565c3fffa97b92943c97d233bc94250aa2631e7de3ba0dd",
    "size": 815,
  },
  {
    "path": "docs/ltx.md",
    "sha256": "f33b64a043c7ce97a0f7f318e692c511f4400b8945a3e53ed65cdc5a1d63ed62",
    "size": 958,
  },
  {
    "path": "docs/ogf.md",
    "sha256": "f20b1e8493e752ae88adb9377fcba52c53dc6b61398eab620632e4fb5e91e0f1",
    "size": 2397,
  },
  {
    "path": "docs/omf.md",
    "sha256": "2bc6678e6854d73abb5b9be34f02739a10cb31876d3d365946c62d27c5a3103e",
    "size": 3252,
  },
  {
    "path": "docs/particle.md",
    "sha256": "46beb5169441fac01c0f002c62dcc5d35bcaced4f29fce76b04a3694e7f6adc9",
    "size": 2568,
  },
  {
    "path": "docs/spawn.md",
    "sha256": "a36cc20acd0a9741cb66e2a459b017ac5f42aa7921a83ff32fb45bb99f4623f2",
    "size": 2393,
  },
  {
    "path": "docs/texture.md",
    "sha256": "223ae6f7f5456ee1bf5e1b7f50566444e5f590a457588f0e870b0e8819f35a02",
    "size": 4926,
  },
  {
    "path": "docs/thm.md",
    "sha256": "9f5c88e61abad75a431045030442e22c360c7de8e8b832bfc41505e6aba122e7",
    "size": 946,
  },
  {
    "path": "docs/translation.md",
    "sha256": "bc552503f6f8cc3f014c41592dd6509223b7e476df5ef1e62f747e7d3f5650b4",
    "size": 2039,
  },
  {
    "path": "drifted/README.md",
    "sha256": "35db1bffa5ee9c9e44e31d2688bf494f0087c6e21f4d2e39393914acd793cae4",
    "size": 25,
  },
]
`;
